--- a/index.html
+++ b/index.html
@@ -37,15 +37,150 @@
               </div>
         </section>
     </header>
-<!-- Button section// -->
+<!-- Middle section// -->
     <main>
-      <section>
+      <section class="main-section">
         <div class="button-main">
           <div><button class="btn-1">Upcoming Match</button></div>
           <div><button class="btn-2">All Group</button></div>
           <div><button class="btn-3">Blog</button></div>
         </div>
+
+        <div class="card-main">
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+          <div class="card-all">
+            <div class="card-banner">
+              <img src="assets/Blog Image.png" alt="">
+            </div>
+  
+            <div class="card-detail">
+              <button>Transfer</button>
+              <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+              <i class="fa-sharp fa-regular fa-clock"></i><span>10h</span>
+              <i class="fa-regular fa-comment-dots"></i><span>23</span>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+<!-- Footer Section// -->
+    <footer>
+      <div class="footer-container">
+        <div class="footer-first-section">
+          <h2>Goal</h2>
+          <hr>
+        </div>
+  
+        <div class="footer-second-section">
+          <div class="para"><p>Contact Us</p></div>
+          <div class="para"><p>Terms of Service</p></div>
+          <div class="para"><p>Privacy Policy</p></div>
+          <div class="para"><p>Privacy Settings</p></div>
+          <div class="para"><p>Goal App</p></div>
+          <div class="para"><p>Goal Live</p></div>
+        </div>
+
+        <div class="social-media">
+            <div class="s-media-icon"><a href="https://www.facebook.com/tanzila.nusrat.24"></a></div>
+            <div class="s-media-icon"><a href="http://"></a></div>
+            <div class="s-media-icon"><a href="http://"></a></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
