--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <i class="fa-regular fa-comment-dots"></i><span>23</span>
             </div>
           </div>
-          <div class="card-all">
-            <div class="card-banner">
+          <div class="card-all extra-card">
+            <div class="card-banner-">
               <img src="assets/Blog Image.png" alt="">
             </div>
   
@@ -156,6 +156,7 @@
             </div>
           </div>
         </div>
+        <span class="extra-button"><button class="view-button">View All</button></span>        
       </section>
     </main>
 <!-- Footer Section// -->
@@ -176,9 +177,9 @@
         </div>
 
         <div class="social-media">
-            <div class="s-media-icon"><a href="https://www.facebook.com/tanzila.nusrat.24"></a></div>
-            <div class="s-media-icon"><a href="http://"></a></div>
-            <div class="s-media-icon"><a href="http://"></a></div>
+            <div class="s-media-icon"><a href="https://www.facebook.com/tanzila.nusrat.24" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></div>
+            <div class="s-media-icon"><a href="https://www.instagram.com/invites/contact/?i=1ae8m7ls0cahx&utm_content=1ooa3ls" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></div>
+            <div class="s-media-icon"><a href="https://www.linkedin.com/in/tanzila-nusrat" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
         </div>
       </div>
     </footer>
