--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="main-section">
         <div class="button-main">
-          <div><button class="btn-1">Upcoming Match</button></div>
+          <div><button onclick="window.location.href='Upcoming-match.html';"  class="btn-1">Upcoming Match</button></div>
           <div><button class="btn-2">All Group</button></div>
           <div><button class="btn-3">Blog</button></div>
         </div>
@@ -156,7 +156,7 @@
             </div>
           </div>
         </div>
-        <span class="extra-button"><button class="view-button">View All</button></span>        
+        <button class="view-button">View All</button>        
       </section>
     </main>
 <!-- Footer Section// -->
