--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="main-section">
         <div class="button-main">
-          <div><button onclick="window.location.href='Upcoming-match.html';"  class="btn-1">Upcoming Match</button></div>
+          <div><button class="btn-1"><a href="match.html">Upcoming Match</a></button></div>
           <div><button class="btn-2">All Group</button></div>
           <div><button class="btn-3">Blog</button></div>
         </div>
